--- a/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.scss
+++ b/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.scss
@@ -1,51 +1,68 @@
-
 .container {
-    margin: 30px 70px 30px 70px;
+  margin: 30px 70px 30px 70px;
 }
 
 .header-container {
-    display: inline-flex;
+  display: inline-flex;
 }
-.btn-add{
-    border: 1px #6200EE solid;
-    color: #6200EE;
-    margin-left:40px ;
-    padding: 0px 30px 0px 30px;
-  }
-  .icon-add{
-      color: #6200EE;
-  }
-  .body-container{
-      margin-top: 40px;
-  }
+.btn-add {
+  border: 1px #6200ee solid;
+  color: #6200ee;
+  margin-left: 40px;
+  padding: 0px 30px 0px 30px;
+}
+.icon-add {
+  color: #6200ee;
+}
+.body-container {
+  margin-top: 40px;
+}
 
-  .default {
-    border: 1px dashed lightgray;
-    padding: 1rem;
-    border-radius: 10px 10px;
-    margin-top: 20px;
-  }
-  table {
-    .table__cell {
-      min-width: 90px;
-      padding: 0px 8px;
-    }
-  }
+.default {
+  border: 1px dashed lightgray;
+  padding: 1rem;
+  border-radius: 10px 10px;
+  margin-top: 20px;
+}
 
-  .footer {
-    text-align: end;
-    margin: 50px 10px 50px 10px;
+table {
+  border: 1px solid #f1eeee;
+  .table__cell {
+    min-width: 90px;
+    padding: 0px 8px;
   }
-  
-  .footer__btn-close {
-    color: #b00020;
-    border: 1px solid #b00020;
-    margin-right: 20px;
-    padding: 0px 30px 0px 30px;
-  }
-  
-  .footer__btn-save {
-    background: #6200ee;
-    color: white;
-    padding: 0px 30px 0px 30px;
-  }
+}
+
+th {
+  background-color: #f0eefc;
+  font-weight: bold;
+  font-size: 16px;
+  letter-spacing: 0.15px;
+  color: #2b2b2b;
+}
+
+
+td {
+  font-size: 16px;
+  letter-spacing: 0.5px;
+  color: #000000;
+}
+
+
+.footer {
+  text-align: end;
+  margin: 50px 10px 50px 10px;
+}
+
+.footer__btn-close {
+  color: #b00020;
+  border: 1px solid #b00020;
+  margin-right: 20px;
+  padding: 0px 30px 0px 30px;
+}
+
+.footer__btn-save {
+  background: #6200ee;
+  color: white;
+  padding: 0px 30px 0px 30px;
+}
