--- a/src/app/main/pages/andon/reports/reports.component.scss
+++ b/src/app/main/pages/andon/reports/reports.component.scss
@@ -44,17 +44,31 @@
             font-weight: bold;
             margin-bottom: 10px;
         }
-        &--supplies {
-            background: rgba(98, 0, 238, 0.24);
+        
+        &--ot {
+            background: rgba(159, 255, 203);
             font-weight: bold;
+            font-size: 0.9em;
             color: black;
             border-radius: 5px;
-            padding: 8px 30px 8px 30px;
+            padding: 4px 15px 4px 15px;
+            border: transparent;
+            margin-bottom: 12px;
+        }
+        &--supplies {
+            // background: rgba(98, 0, 238, 0.24);
+            background: rgba(0, 165, 207);
+            font-weight: bold;
+            font-size: 0.9em;
+            color: white;
+            border-radius: 5px;
+            padding: 4px 15px 4px 15px;
             border: transparent;
             margin-bottom: 12px;
         }
         &--return {
-            background: #27ae60;
+            width: 100%;
+            background: #6200EE;
             color: white;
             border-radius: 5px;
             padding: 0px 30px 0px 30px;
