--- a/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
+++ b/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
@@ -744,7 +744,11 @@
         </ng-container>
 
         <ng-container matColumnDef="observacionesTaller">
-          <th mat-header-cell *matHeaderCellDef class="table__cell">
+          <th
+            mat-header-cell
+            *matHeaderCellDef
+            class="table__cell observaciones-taller"
+          >
             OBSERVACIONES TALLER
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
@@ -974,6 +978,15 @@
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.cotizacionText ? element.cotizacionText : "---" }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="statusFacturacion">
+          <th mat-header-cell *matHeaderCellDef class="table__cell">
+            STATUS FACTURACIÓN
+          </th>
+          <td mat-cell *matCellDef="let element" class="table__cell">
+            {{ element.statusFacturacion ? element.statusFacturacion : "---" }}
           </td>
         </ng-container>
 
