--- a/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
@@ -4,9 +4,7 @@
       Cant. W.O.
       <span class="quantity">{{ cantWO }}</span>
     </div>
-
     <mat-form-field
-      *ngFor="let searchBox of searchBoxes"
       appearance="outline"
       class="ms-kanban-toolbar__input"
       [ngClass]="
@@ -15,13 +13,88 @@
           : 'ms-kanban-toolbar__input--desktop'
       "
     >
-      <mat-icon matPrefix style="margin-right: 12px">{{
-        searchBox.icon
-      }}</mat-icon>
+      <mat-icon matPrefix style="margin-right: 12px"> business </mat-icon>
       <input
         matInput
         type="text"
-        placeholder="{{ searchBox.placeholder }}"
+        [formControl]="tallerFormControl"
+        placeholder="Taller"
+        autocomplete="off"
+      />
+    </mat-form-field>
+
+    <mat-form-field
+      appearance="outline"
+      class="ms-kanban-toolbar__input"
+      [ngClass]="
+        isMobile
+          ? 'ms-kanban-toolbar__input--mobile'
+          : 'ms-kanban-toolbar__input--desktop'
+      "
+    >
+      <mat-icon matPrefix style="margin-right: 12px"> search </mat-icon>
+      <input
+        matInput
+        type="text"
+        [formControl]="woMainFormControl"
+        placeholder="WO MAIN"
+        autocomplete="off"
+      />
+    </mat-form-field>
+
+    <mat-form-field
+      appearance="outline"
+      class="ms-kanban-toolbar__input"
+      [ngClass]="
+        isMobile
+          ? 'ms-kanban-toolbar__input--mobile'
+          : 'ms-kanban-toolbar__input--desktop'
+      "
+    >
+      <mat-icon matPrefix style="margin-right: 12px"> search </mat-icon>
+      <input
+        matInput
+        type="text"
+        [formControl]="woChildFormControl"
+        placeholder="WO CHILD"
+        autocomplete="off"
+      />
+    </mat-form-field>
+
+    <mat-form-field
+      appearance="outline"
+      class="ms-kanban-toolbar__input"
+      [ngClass]="
+        isMobile
+          ? 'ms-kanban-toolbar__input--mobile'
+          : 'ms-kanban-toolbar__input--desktop'
+      "
+    >
+      <mat-icon matPrefix style="margin-right: 12px"> search </mat-icon>
+      <input
+        matInput
+        type="text"
+        [formControl]="clienteFormControl"
+        placeholder="CLIENTE"
+        autocomplete="off"
+      />
+    </mat-form-field>
+
+    <mat-form-field
+      appearance="outline"
+      class="ms-kanban-toolbar__input"
+      [ngClass]="
+        isMobile
+          ? 'ms-kanban-toolbar__input--mobile'
+          : 'ms-kanban-toolbar__input--desktop'
+      "
+    >
+      <mat-icon matPrefix style="margin-right: 12px"> search </mat-icon>
+      <input
+        matInput
+        type="text"
+        [formControl]="statusFormControl"
+        placeholder="STATUS PPTO"
         autocomplete="off"
       />
     </mat-form-field>
@@ -637,7 +710,51 @@
             STATUS PRESUPUESTO
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
-            {{ element.statusPresupuesto ? element.statusPresupuesto : "---" }}
+            <div [ngSwitch]="element.statusPresupuesto">
+              <div
+                class="budget--status__bubble--approved"
+                *ngSwitchCase="'PPTO. APROBADO'"
+              >
+                APROBADO
+              </div>
+              <div
+                class="budget--status__bubble--rejected"
+                *ngSwitchCase="'PPTO. RECHAZADO'"
+              >
+                RECHAZADO
+              </div>
+              <div
+                class="budget--status__bubble--send--pending"
+                *ngSwitchCase="'PDTE. ENVÍO PPTO.'"
+              >
+                PENDIENTE DE ENVÍO
+              </div>
+              <div
+                class="budget--status__bubble--approval--pending"
+                *ngSwitchCase="'PDTE. APROB.'"
+              >
+                PENDIENTE DE APROBACIÓN
+              </div>
+              <div
+                class="budget--status__bubble--parallel"
+                *ngSwitchCase="'PPTO. PARALELO'"
+              >
+                PARALELO
+              </div>
+              <div
+                class="budget--status__bubble--modified"
+                *ngSwitchCase="'PPTO. MODIFICADO'"
+              >
+                MODIFICADO
+              </div>
+              <div
+                class="budget--status__bubble--customer"
+                *ngSwitchCase="'CLIENTE INTERNO'"
+              >
+                CLIENTE INTERNO
+              </div>
+              <div *ngSwitchDefault>---</div>
+            </div>
           </td>
         </ng-container>
 
@@ -1092,7 +1209,7 @@
             mat-header-cell
             *matHeaderCellDef
             mat-sort-header
-            class="table__cell"
+            class="table__cell observaciones-taller"
           >
             OBSERVACIONES TALLER
           </th>
@@ -1432,6 +1549,15 @@
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.cotizacionText ? element.cotizacionText : "---" }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="statusFacturacion">
+          <th mat-header-cell *matHeaderCellDef class="table__cell">
+            STATUS FACTURACIÓN
+          </th>
+          <td mat-cell *matCellDef="let element" class="table__cell">
+            {{ element.statusFacturacion ? element.statusFacturacion : "---" }}
           </td>
         </ng-container>
 
