:construction: highlight rows of modified budgets

--- a/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
@@ -1688,7 +1688,14 @@
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <tr
+          mat-row
+          *matRowDef="let row; columns: displayedColumns"
+          [ngClass]="{
+            'modified--budget__highlight--row':
+              row.statusPresupuesto == 'PPTO. MODIFICADO'
+          }"
+        ></tr>
       </table>
     </div>
     <mat-paginator
