:construction: download excel

--- a/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
@@ -104,6 +104,7 @@
       class="download"
       mat-raised-button
       color="primary"
+      (click)="downloadReport()"
     >
       DESCARGAR
       <mat-icon aria-label="agregar" class="icon-add">download</mat-icon>
