--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.scss
@@ -8,9 +8,9 @@
   background: #27ae60;
   border: 1px solid #d8d8d8;
   border-radius: 5px;
-  color: #2b2b2b;
+  color: white;
   font-family: Roboto;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 16px;
   margin-right: 0.4em;
   .quantity {
