--- a/src/app/main/pages/andon/dashboard/dashboard.component.html
+++ b/src/app/main/pages/andon/dashboard/dashboard.component.html
@@ -38,7 +38,7 @@
 
             <div class="container1__top mat-elevation-z4" *ngIf="topDelay$ | async as delays">
                 <h1 class="container1__top--title1">
-                    Top 10 mas demorados
+                    Top 10 demoras
                 </h1>
                 <div class="top-ten">
                     <ul class="top-ten__list1">
