:hammer: fixed a delete issue

--- a/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
+++ b/src/app/main/pages/budgets/budgets-daily-entries/budgets-daily-entries.component.html
@@ -1053,7 +1053,7 @@
                 <button
                   class="w3-small"
                   mat-menu-item
-                  (click)="deleteDialog(i)"
+                  (click)="deleteDialog(element)"
                 >
                   <mat-icon>delete</mat-icon>
                   Borrar
