:hammer: PR suggested changes applied

--- a/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-delete-dialog/budgets-summary-delete-dialog.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-delete-dialog/budgets-summary-delete-dialog.component.html
@@ -4,6 +4,7 @@
       <mat-icon mat-list-icon>delete</mat-icon>
     </div>
     Borrar
+    <span class="ms-fill"></span>
     <div mat-dialog-close class="delete-title--close">
       <mat-icon>clear</mat-icon>
     </div>
