--- a/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
@@ -1667,7 +1667,7 @@
           <th mat-header-cell *matHeaderCellDef class="table__cell">
             Acciones
           </th>
-          <td mat-cell *matCellDef="let element; let i = index">
+          <td mat-cell *matCellDef="let element">
             <ng-container>
               <mat-menu #rawMenu="matMenu">
                 <button
@@ -1680,7 +1680,7 @@
                   "
                   class="w3-small"
                   mat-menu-item
-                  (click)="sendDialog(i)"
+                  (click)="sendDialog(element)"
                 >
                   <mat-icon>attach_email</mat-icon>
                   Enviar PPTO
@@ -1689,7 +1689,7 @@
                   *ngIf="element.statusPresupuesto != 'CLIENTE INTERNO'"
                   class="w3-small"
                   mat-menu-item
-                  (click)="timelineDialog(i)"
+                  (click)="timelineDialog(element)"
                 >
                   <mat-icon>timeline</mat-icon>
                   Historial
