--- a/src/app/main/pages/quality/analysis/progress/dialogs/detail-external-dialog/detail-external-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/progress/dialogs/detail-external-dialog/detail-external-dialog.component.html
@@ -15,17 +15,13 @@
             <form [formGroup]="detailFormGroup" class="timer-container">
                 <p><span style="font-weight: bold;"> OT actual :</span> {{data.workOrder ? data.workOrder : ''}}</p>
                 <p><span style="font-weight: bold;"> Componente :</span> {{data.component ? data.component : ''}}</p>
-                <p><span style="font-weight: bold;"> Número de paqueteo :</span> {{data.packageNumber ?
-                    data.packageNumber : ''}}</p>
-                <p><span style="font-weight: bold;"> Horómetro de componente :</span> {{data.componentHourMeter ?
-                    data.componentHourMeter : ''}}</p>
+                <p><span style="font-weight: bold;"> Número de paqueteo :</span> {{data.packageNumber ? data.packageNumber : ''}}</p>
+                <p><span style="font-weight: bold;"> Horómetro de componente :</span> {{data.componentHourMeter ? data.componentHourMeter : ''}}</p>
                 <p><span style="font-weight: bold;"> Número de parte :</span> {{data.partNumber ? data.partNumber : ''}}
                 </p>
                 <p><span style="font-weight: bold;"> Tipo de evento :</span> {{data.eventType? data.eventType : ''}}</p>
-                <p><span style="font-weight: bold;"> Operación minera :</span> {{data.miningOperation ?
-                    data.miningOperation : ''}} </p>
-                <p><span style="font-weight: bold;"> Fecha :</span>
-                    {{data.createdAt ? ((data.createdAt['seconds'] * 1000) | date : 'dd/MM/yy - hh:mm:ss'): ''}}
+                <p><span style="font-weight: bold;"> Operación minera :</span> {{data.miningOperation ? data.miningOperation : ''}} </p>
+                <p><span style="font-weight: bold;"> Fecha :</span> {{data.createdAt ? ((data.createdAt['seconds'] * 1000) | date : 'dd/MM/yy - hh:mm:ss'): ''}}
                 </p>
 
                 <mat-form-field appearance="outline" id="result" class="timer-container__input">
@@ -35,23 +31,23 @@
                 <br>
                 <mat-form-field appearance="outline" id="result" class="timer-container__input">
                     <mat-label>1 ¿Cuentame que sucedió?</mat-label>
-                    <input matInput type="text" placeholder="Bahia" formControlName="question1" readonly>
+                    <textarea matInput type="text" placeholder="Bahia" formControlName="question1" readonly></textarea>
                 </mat-form-field>
                 <br>
                 <mat-form-field appearance="outline" id="result" class="timer-container__input">
                     <mat-label>2. ¿Qué acciones de corrección se realizaron para solucionar el problema?</mat-label>
-                    <input matInput type="text" placeholder="Bahia" formControlName="question2" readonly>
+                    <textarea matInput type="text" placeholder="Bahia" formControlName="question2" readonly></textarea>
 
                 </mat-form-field>
                 <br>
                 <mat-form-field appearance="outline" id="result" class="timer-container__input">
                     <mat-label>3. Cuál crees que fue la causa de la falla?</mat-label>
-                    <input matInput type="text" placeholder="Bahia" formControlName="question3" readonly>
+                    <textarea matInput type="text" placeholder="Bahia" formControlName="question3" readonly></textarea>
                 </mat-form-field>
                 <br>
                 <mat-form-field appearance="outline" id="result" class="timer-container__input">
                     <mat-label>4. ¿Qué recomendarias para evitar que este problema vuelva a suceder?</mat-label>
-                    <input matInput type="text" placeholder="Bahia" formControlName="question4" readonly>
+                    <textarea matInput type="text" placeholder="Bahia" formControlName="question4" readonly></textarea>
                 </mat-form-field>
 
                 <div class="details-title">
@@ -61,15 +57,13 @@
                 <p class="analysis-result"><span> Calidad:</span> {{data.analysisQuality ? data.analysisQuality : '-'}}
                 </p>
                 <p class="analysis-result"><span> Costo:</span> {{data.analysisCost ? data.analysisCost : '-'}}</p>
-                <p class="analysis-result"><span> Frecuencia:</span> {{data.analysisFrequency ? data.analysisFrequency :
-                    '-'}}</p>
-                <p class="analysis-result"><span> Nivel de riesgo:</span> {{data.evaluationAnalysisName ?
-                    (data.evaluationAnalysisName + ' (' + data.evaluationAnalisis + ')') : '-'}}</p>
-                <p class="analysis-result"><span> Causante de falla:</span> {{data.analysis ?
-                    data.analysis['causeFailure'] : '-'}}</p>
+                <p class="analysis-result"><span> Frecuencia:</span> {{data.analysisFrequency ? data.analysisFrequency : '-'}}
+                </p>
+                <p class="analysis-result"><span> Nivel de riesgo:</span> {{data.evaluationAnalysisName ? (data.evaluationAnalysisName + ' (' + data.evaluationAnalisis + ')') : '-'}}</p>
+                <p class="analysis-result"><span> Causante de falla:</span> {{data.analysis ? data.analysis['causeFailure'] : '-'}}</p>
                 <p class="analysis-result"><span> Proceso:</span> {{data.analysis ? data.analysis['process'] : '-'}}</p>
-                <p class="analysis-result"><span> Observación:</span> {{data.analysis ? data.analysis['observation'] :
-                    '-'}}</p>
+                <p class="analysis-result"><span> Observación:</span> {{data.analysis ? data.analysis['observation'] : '-'}}
+                </p>
 
                 <ng-container *ngIf="data.correctiveActions">
                     <div class="details-title">
@@ -77,8 +71,7 @@
                         <span class="ms-fill details-title__decoration"></span>
                     </div>
                     <div *ngFor="let action of data.correctiveActions; let i = index" class="corrective-actions__list">
-                        <span class="corrective-actions__index"
-                            [ngClass]="{'corrective-actions__index--done' : action.kit}">{{i+1}}</span>
+                        <span class="corrective-actions__index" [ngClass]="{'corrective-actions__index--done' : action.kit}">{{i+1}}</span>
                         <span class="corrective-actions__description">{{action.corrective}}</span>
                         <span class="ms-fill"></span>
                         <span class="corrective-actions__area">{{action.name}}</span>
