--- a/src/app/main/pages/quality/analysis/results/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
+++ b/src/app/main/pages/quality/analysis/results/dialogs/detail-internal-dialog/detail-internal-dialog.component.html
@@ -18,13 +18,12 @@
                 </p>
                 <p><span style="font-weight: bold;"> Taller:</span> {{data.workShop ? data.workShop : ''}}</p>
                 <p><span style="font-weight: bold;"> Tipo de evento :</span> {{data.eventType? data.eventType : ''}}</p>
-                <p><span style="font-weight: bold;"> Fecha :</span>
-                    {{data.createdAt ? ((data.createdAt['seconds'] * 1000) | date : 'dd/MM/yy - hh:mm:ss'): ''}}
+                <p><span style="font-weight: bold;"> Fecha :</span> {{data.createdAt ? ((data.createdAt['seconds'] * 1000) | date : 'dd/MM/yy - hh:mm:ss'): ''}}
                 </p>
 
                 <mat-form-field appearance="outline" id="result" class="timer-container__input">
                     <mat-label>Detalle de evento</mat-label>
-                    <input matInput type="text" placeholder="Detalle de evento" formControlName="enventDetail" readonly>
+                    <textarea matInput type="text" placeholder="Detalle de evento" formControlName="enventDetail" readonly></textarea>
                 </mat-form-field>
 
                 <div class="details-title">
@@ -35,15 +34,13 @@
                 <p class="analysis-result"><span> Calidad:</span> {{data.analysisQuality ? data.analysisQuality : '-'}}
                 </p>
                 <p class="analysis-result"><span> Costo:</span> {{data.analysisCost ? data.analysisCost : '-'}}</p>
-                <p class="analysis-result"><span> Frecuencia:</span> {{data.analysisFrequency ? data.analysisFrequency :
-                    '-'}}</p>
-                <p class="analysis-result"><span> Nivel de riesgo:</span> {{data.evaluationAnalysisName ?
-                    (data.evaluationAnalysisName + ' (' + data.evaluationAnalisis + ')') : '-'}}</p>
-                <p class="analysis-result"><span> Causante de falla:</span> {{data.analysis ?
-                    data.analysis['causeFailure'] : '-'}}</p>
+                <p class="analysis-result"><span> Frecuencia:</span> {{data.analysisFrequency ? data.analysisFrequency : '-'}}
+                </p>
+                <p class="analysis-result"><span> Nivel de riesgo:</span> {{data.evaluationAnalysisName ? (data.evaluationAnalysisName + ' (' + data.evaluationAnalisis + ')') : '-'}}</p>
+                <p class="analysis-result"><span> Causante de falla:</span> {{data.analysis ? data.analysis['causeFailure'] : '-'}}</p>
                 <p class="analysis-result"><span> Proceso:</span> {{data.analysis ? data.analysis['process'] : '-'}}</p>
-                <p class="analysis-result"><span> Observación:</span> {{data.analysis ? data.analysis['observation'] :
-                    '-'}}</p>
+                <p class="analysis-result"><span> Observación:</span> {{data.analysis ? data.analysis['observation'] : '-'}}
+                </p>
 
                 <ng-container *ngIf="data.correctiveActions">
                     <div class="details-title">
@@ -51,8 +48,7 @@
                         <span class="ms-fill details-title__decoration"></span>
                     </div>
                     <div *ngFor="let action of data.correctiveActions; let i = index" class="corrective-actions__list">
-                        <span class="corrective-actions__index"
-                            [ngClass]="{'corrective-actions__index--done' : action.kit}">{{i+1}}</span>
+                        <span class="corrective-actions__index" [ngClass]="{'corrective-actions__index--done' : action.kit}">{{i+1}}</span>
                         <span class="corrective-actions__description">{{action.corrective}}</span>
                         <span class="ms-fill"></span>
                         <span class="corrective-actions__area">{{action.name}}</span>
